Fixed background image not completely covering left screen problem.

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@ body {
     display: flex;
     padding: 0;
     margin: 0;
+    width: 100vw;
+    height: 100vh;
+    
 }
 
 .left-screen {
@@ -19,6 +22,12 @@ body {
 
     display: flex;
     flex-direction: column;
+}
+
+@media (max-aspect-ratio: 2/1) {
+    .left-screen {
+        background-size: auto 100%;
+    }
 }
 
 .logo-box {
